@@ -1,5 +1,11 @@
 2018-03-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/gif.c (ReadGIFImage): Fix use of uninitialized data when
+	reading GIF extension blocks.  Fixes oss-fuzz 6609
+	"graphicsmagick/coder_GIF_fuzzer: Use-of-uninitialized-value in
+	MagickArraySize". This seems to be a totally benign issue. (Credit
+	to OSS-Fuzz)
+
 	* magick/magick.c (MagickSignal): Use an alternate signal stack,
 	if available.  This is required for Go lang C language extensions
 	since Go lang requests an alternate signal sack, and uses small
@@ -13,7 +19,7 @@
 	* magick/pixel_cache.c (AcquireCacheNexus): Add a check that the
 	pixel cache is compatible with the image dimensions.  Fixes
 	oss-fuzz issues 5978 5988 5989 5990 5993 6016, and 6056, which are
-	all related to the PICT writer.
+	all related to the PICT writer. (Credit to OSS-Fuzz)
 
 	* magick/draw.c (DrawGetStrokeDashArray): Check for failure to
 	allocate memory.  Patch submited by Petr Gajdos via email on
